wip(cart): add Cart and CartItem components with Zustand store and product CRUD logic

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -52,38 +52,37 @@
   --radius: 0.625rem;
 
   /* --- LIGHT THEME --- */
-  --background: oklch(1 0 0);
-  --foreground: oklch(0.147 0.004 49.25);
-
+  --background: #ffffff;
+  --foreground: #09090b;
   --primary: var(--color-gechis-gold);
-  --primary-foreground: white;
+  --primary-foreground: #ffffff;
 
   --secondary: var(--color-gechis-blue-light);
-  --secondary-foreground: white;
+  --secondary-foreground: ffffff;
 
   --accent: var(--color-gechis-accent);
-  --accent-foreground: white;
+  --accent-foreground: ffffff;
 
-  --muted: oklch(0.97 0.001 106.424);
-  --muted-foreground: oklch(0.553 0.013 58.071);
+  --muted: #f5f5f4;
+  --muted-foreground: #79716b;
 
-  --card: white;
+  --card: ffffff;
   --card-foreground: var(--foreground);
 
-  --border: oklch(0.9 0.003 48.717);
+  --border: #e0dddc;
   --ring: var(--color-gechis-gold-light);
 
   --success: var(--color-success);
   --warning: var(--color-warning);
   --error: var(--color-error);
-  --sidebar: hsl(0 0% 98%);
-  --sidebar-foreground: hsl(240 5.3% 26.1%);
-  --sidebar-primary: hsl(240 5.9% 10%);
-  --sidebar-primary-foreground: hsl(0 0% 98%);
-  --sidebar-accent: hsl(240 4.8% 95.9%);
-  --sidebar-accent-foreground: hsl(240 5.9% 10%);
-  --sidebar-border: hsl(220 13% 91%);
-  --sidebar-ring: hsl(217.2 91.2% 59.8%);
+  --sidebar: #fafafa;
+  --sidebar-foreground: #3f3f46;
+  --sidebar-primary: #18181b;
+  --sidebar-primary-foreground: #fafafa;
+  --sidebar-accent: #f4f4f5;
+  --sidebar-accent-foreground: #18181b;
+  --sidebar-border: #e5e7eb;
+  --sidebar-ring: #3b82f6;
 }
 
 .dark {
@@ -101,7 +100,7 @@
   --accent-foreground: black;
 
   --muted: var(--color-gechis-blue);
-  --muted-foreground: oklch(0.7 0.01 56.259);
+  --muted-foreground: #a49d98;
 
   --card: var(--color-gechis-blue);
   --card-foreground: var(--foreground);
@@ -112,14 +111,14 @@
   --success: #34d399;
   --warning: #fbbf24;
   --error: #f87171;
-  --sidebar: hsl(240 5.9% 10%);
-  --sidebar-foreground: hsl(240 4.8% 95.9%);
-  --sidebar-primary: hsl(224.3 76.3% 48%);
-  --sidebar-primary-foreground: hsl(0 0% 100%);
-  --sidebar-accent: hsl(240 3.7% 15.9%);
-  --sidebar-accent-foreground: hsl(240 4.8% 95.9%);
-  --sidebar-border: hsl(240 3.7% 15.9%);
-  --sidebar-ring: hsl(217.2 91.2% 59.8%);
+  --sidebar: hwb(240 9% 89%);
+  --sidebar-foreground: #9c9cf0;
+  --sidebar-primary: #1d4ed8;
+  --sidebar-primary-foreground: #ffffff;
+  --sidebar-accent: #27272a;
+  --sidebar-accent-foreground: #f4f4f5;
+  --sidebar-border: #27272a;
+  --sidebar-ring: #3b82f6;
 }
 
 @keyframes slide-up {
