wip(profile): building user account and profile update UI

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -152,6 +152,9 @@
   h6 {
     @apply font-semibold;
   }
+  button {
+    @apply cursor-pointer;
+  }
 }
 
 /* --------------------------------------------------------- */
